--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ nav li a.active {
 }
 
 #achtergrond4{
-  background-image: url("afbeeldingen/_ (1).jpeg");
+  background-image: url("afbeeldingen/_.jpeg");
   background-position: 100%;
   background-repeat: no-repeat;
   background-size: cover;
